[package]
name = "twilio-bot"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Twilio bot service for handling voice calls"

[dependencies]
# Rocket web framework
rocket = { version = "0.5.0", features = ["json"] }

# Async runtime
tokio = { version = "1.28", features = ["full"] }

# WebSocket support
tokio-tungstenite = "0.18.0"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Environment variables
dotenv = "0.15"

# UUID generation
uuid = { version = "1.3", features = ["v4", "serde"] }

# Regular expressions
regex = "1.8"

# Base64 encoding
base64 = "0.21"

# URL encoding
urlencoding = "2.1"

# Utility libraries
thiserror = "1.0"